
include_directories(../source/src)
add_executable(qwt_simpleplot  simpleplot/simpleplot.cpp)
target_link_libraries(qwt_simpleplot  qwtX ${QT_LIBRARIES})


function(qwtMakeSample  subdir)
    file(GLOB  xhdr  ${subdir}/*.h)
    file(GLOB  xcpp   ${subdir}/*.cpp)
    message(STATUS  "hdrs,cpp:  ${xhdr} , ${xcpp}")
    QT4_WRAP_CPP(xmocz  ${xhdr}  OPTIONS ${MOC_WARNING_FLG} )
    set( SampleSource   ${xcpp}  ${xmocz}  ${xhdr} )
    message(STATUS  "sample source qwt= ${SampleSource} ")
    add_executable(qwt_${subdir}  ${SampleSource})
    target_link_libraries(qwt_${subdir}  qwtX ${QT_LIBRARIES})
    file(GLOB  extraz  ${subdir}/*.xpm ${subdir}/*.png)
    install(FILES  ${extraz}  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endfunction(qwtMakeSample)

qwtMakeSample( realtime )
qwtMakeSample( controls )
qwtMakeSample( event_filter )
qwtMakeSample( refreshtest )
qwtMakeSample( scatterplot )
qwtMakeSample( spectrogram )
